[metadata]
name = ray-gcs
version = 0.0.5
author = Tobias Kaymak
author_email = tobias.kaymak@gmail.com
description = Ray KV GCS addon
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tkaymak/ray-gcs
project_urls =
    Bug Tracker = https://github.com/tkaymak/ray-gcs/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
   ray
   google-cloud-storage

[options.packages.find]
where = src
